rckgames/public/css/app.css
@font-face {
    font-family: "Poppins";
    src: url('../fonts/Poppins/Poppins-Regular.ttf') format("truetype");
}
@font-face {
    font-family: "Poppins SemiBold";
    src: url('../fonts/Poppins/Poppins-SemiBold.ttf') format("truetype");
}
@font-face {
    font-family: "Poppins Medium";
    src: url('../fonts/Poppins/Poppins-Medium.ttf') format("truetype");
}

@font-face {
    font-family: "Open Sans";
    src: url('../fonts/Open_Sans/OpenSans-VariableFont_wdth,wght.ttf') format("truetype");
}

.icon-angle-left,.icon-angle-right{
    display: inline-block;
    background-position: center!important; 
    background-size: cover!important;
    width: var(--owl-nav-sizes);
    height: var(--owl-nav-sizes);   
}
.icon-angle-left{background: url('../assets/icons/PreviousButton@1x.png') no-repeat;}
.icon-angle-right{background: url('../assets/icons/NextButton@1x.png') no-repeat;}

body{
    background-color: #f8f9fa;
    font-family: 'Poppins', Arial;
    max-width: 100vw;
    overflow-x: hidden;
}
h1,h3,.card-title, #contact .subtitle{
    font-family: 'Poppins SemiBold', Arial ;
}
.quote, #contact h1,#project-name{font-family: 'Poppins Medium', Arial;}
.text,.card-subtitle,.card-body ul li,.project-description,.badge{
    font-family: 'Open Sans', Arial ;
}

.navbar{font-size:15px;font-weight: 500;height: 100px;padding-right: 30px!important;}
.navbar-brand {height: 100px;}
.navbar-brand img{width: 77px; height: 77px;}
.bg-light{background-color: #fff!important; color: #000!important;}
.bg-dark{background-color: #000!important; color: #fff!important;}
.navbar-light{border-bottom: solid 0.5px #D9D9D9;}
.navbar-dark{border-bottom: solid 0.5px #EFEFEF;}
.navbar-light .be-solid-bnw{border-right: solid 0.5px #D9D9D9;}
.navbar-dark .be-solid-bnw{border-right: solid 0.5px #EFEFEF;}
.navbar-light .navbar-brand img{
    filter: invert(0);
}
.navbar-dark .navbar-brand img{
    filter: invert(1);
}
.nav-item{
    font-size: 15px ;
    font-weight: 500 ;
}
.navbar-light.nav-link,.navbar-light a:hover,.navbar-light .nav-item.active a.nav-link{ color: #000!important;}
.navbar-dark.nav-link,.navbar-dark a:hover,.navbar-dark .nav-item.active a.nav-link{ color: #fff!important;}
.nav-item.active{border-bottom: solid 2px;}
@media (min-width: 992px){
    .navbar-expand-lg .navbar-nav .nav-link {
        padding-right: 15px;
        padding-left: 15px;
    }
}
.pt-nav{padding-top: 100px;}

.be-solid-white{border-right: solid 2px #fff;}

h1{font-size: 30px;}
h2{font-size: 26px;}
h3,p{font-size: 20px;}
.title{text-align: center; font-weight: 600;}
.title.py-5{padding: 5rem 0!important;}
.title.pb-5{padding: 0 0 5rem 0!important;}
.subtitle,.quote,.card-title{font-size: 22px;}
.text{
    color: #737c84;
    font-size: 20px ;
    font-weight: 400 ;
    line-height: 30px ;
    text-align: justify;}
.quote{text-align: center;}
.flip-card-front .card-title{
    height: 3rem;
}
.flip-card-back .card-title{
    font-size: 16px;
    color: #fff;
}
.card-subtitle{
    font-size: 15px ;
    font-weight: 400 ;
    line-height: 26px ;
    color: #737c84 ;
}
.card-body ul li{
    font-size: 16px ;
    font-weight: 400 ;
    line-height: 26px ;
    text-decoration: none!important;
    
}
.flip-card-front> .card-body ul li{color: #fff;}
.flip-card-back>.card-body ul li{color: #737c84 ;}
.card-header {
    background-color: transparent!important; 
    border-bottom: none!important;
}
footer{border-top: solid 0.5px #EFEFEF;}

/*LANDING*/
#index{
    background: url('../assets/img/Banner.webp') no-repeat;
    background-position: center;
    background-size: cover;
    background-attachment:fixed;
    width: 100%;
    height: 100vh;
}
#services{background-color: #f8f9fa; min-height: 100vh;}
#projects,#us{background-color: #fff;}
#us,#contact{min-height: 100vh;}
#contact,footer{background-color: #000!important; color: #fff!important;}
#contact .title{background-color: #000;}
#contact .text{color: #96a1ab;}


/*PROJECT DETAILS*/
#view_project,#login,#register{min-height: 100vh;}
#project-banner{border-radius: 12px ;}
#project-icon{border-radius: 10px ;}

#project-title {
    font-weight: 500;
    color: #000;
}
.project-description{
    font-size: 15px ;
    font-weight: 400 ;
    line-height: 29px ;
    color: #737c84 ;
}

